TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "126005219096512" [label="Start"];
  "126005219096512" -> "126005219094112";
  "126005219094112" [label="Code"];
  "126005219094112" -> "126005219087632";
  "126005219087632" [label="Function"];
  "126005219087632" -> "126005219093824";
  "126005219087632" -> "126005219084368";
  "126005219087632" -> "126005219096368";
  "126005219093824" [label="main"];
  "126005219084368" [label="Parameters"];
  "126005219096368" [label="Code"];
  "126005219096368" -> "126005219089024";
  "126005219096368" -> "126005219096608";
  "126005219096368" -> "126005219093632";
  "126005219089024" [label="Code"];
  "126005219089024" -> "126005219096752";
  "126005219096752" [label="Declaration"];
  "126005219096752" -> "126005219097328";
  "126005219096752" -> "126005219095888";
  "126005219097328" [label="x"];
  "126005219095888" [label="1"];
  "126005219096608" [label="Code"];
  "126005219096608" -> "126005219094880";
  "126005219094880" [label="Declaration"];
  "126005219094880" -> "126005219082304";
  "126005219094880" -> "126005219091376";
  "126005219082304" [label="x"];
  "126005219091376" [label="2"];
  "126005219093632" [label="Return"];
  "126005219093632" -> "126005219091280";
  "126005219093632" -> "126005219093344";
  "126005219091280" [label="return"];
  "126005219093344" [label="0"];
}
